POC2 completed of well and well-list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<!-- <app-users></app-users> -->
+<div class="poc-wrapper">
+    <button class="btn btn-primary" routerLink="/users">POC 1</button>
+    <button class="btn btn-primary" routerLink="/well-list">POC 2</button>
+    <button class="btn btn-primary" routerLink="/dragNDrop">POC 3</button>
 
-<app-well-list></app-well-list>
+    <router-outlet></router-outlet>
+</div>
